# GPT-3.5-turbo-db-read-test

./: LICENSE  README.md  pyproject.toml
src/chadGPT/: __main__.py
src/chadGPT-ui/: README.md  angular.json  package-lock.json  package.json
src/chadGPT-ui/src/: index.html
src/chadGPT-ui/src/app/: app.component.spec.ts  app.component.ts  app.module.ts
src/chadGPT-ui/src/app/chat/: chat.component.html  chat.component.scss  chat.component.ts
src/chadGPT-ui/src/app/chat/chat-block/: chat-block.component.html  chat-block.component.scss  chat-block.component.spec.ts  chat-block.component.ts
src/chadGPT-ui/src/app/services/: chad-gptapi.service.spec.ts  chad-gptapi.service.ts
src/chadGPT/chadGPTcomm/: __init__.py
